organize divs before merge with integraiton

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -3,7 +3,8 @@
 
   <div class="alert alert-info"> <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
-  </button>"Messages here" </div>
+  </button>"Messages here" 
+  </div>
 
   <div class="row">
     <div class="col-lg">
@@ -29,7 +30,7 @@
           <i class="fa fa-slack fa-3x" aria-hidden="true"></i>
           <h3> Slack </h3>
         </div>
-     </div>
+     </div> <!-- end of column -->
    </a>
 
      <div class="col-lg">
@@ -47,7 +48,7 @@
          <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
          <h3> Manage Messages </h3>
        </div>
-     </div>
+     </div> <!-- end of column -->
 
     <div class="col-lg">
       <%= link_to (admin_signups_path), class: 'content-link' do%>
@@ -76,5 +77,5 @@
         <h3> Manage Teams </h3>
       </div>
       <% end %>
-    </div>
- </div>
+    </div> <!-- end of column -->
+ </div> <!-- end of container -->
