--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h2>Admin Dashboard</h2>
+  <h2 class="head mt-2">Admin Dashboard</h2>
 
   <div class="alert alert-info"> <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
