--- a/app/views/admin/dashboard/events.html.erb
+++ b/app/views/admin/dashboard/events.html.erb
@@ -1,4 +1,5 @@
 
+    <h6 class="mt-2"><%= link_to 'Back to Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: white' %></h6>
     <h3 class="mt-3 head" id="events">Current Events</h3>
     <table class='table table-bordered table-light table-striped'>
         <thead class='thead-inverse'>
@@ -17,7 +18,7 @@
                 <td><%= event.name %></td>
                 <td><%= event.start_time.strftime('%H:%M') %></td>
                 <td><%= event.end_time.strftime('%H:%M') %></td>
-                <td><%= event.lead.full_name %></td>
+                <td><%= event&.canvas_captain&.full_name %></td>
                 <td><%= event.creator.full_name %></td>
                 <td><%= link_to 'Show', event %></td>
                 <td><%= link_to fa_icon('times 2x'), event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
