--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -25,7 +25,7 @@
 
         </ul>
       </div>
-      <a href="http://slack.com" class="content-link">
+      <a href="http://slack.com" class="content-link" target="_blank">
         <div class="card dash">
           <i class="fa fa-slack fa-3x" aria-hidden="true"></i>
           <h3> Slack </h3>
