--- a/app/views/admin/dashboard/teams.html.erb
+++ b/app/views/admin/dashboard/teams.html.erb
@@ -1,13 +1,14 @@
 <div class="container-fluid">
     <h3 class="mt-3 head" id="teams">Teams</h3>
 
-    		<%= link_to 'Add a team', new_team_path, style: 'color: black', class: 'btn btn-block add-team-button' %>
+    		<%= link_to 'Add a team', new_team_path, class: 'btn btn-block btn-dark' %>
 
       <div class="row d-flex justify-content-around">
       <% @teams.each do |team| %>
           <% if team.members.count > 0 %>
-          <div class="col-md-3 teambg" style="background-color: rgba(255, 255, 255, 0.5)">
-              <div class="card-header"><strong><%= team.name %></strong></div>
+          <div class="col-md-3 teambg">
+              <div class="card-header teamname-head"><strong> <%=link_to(team_path(team)) do %>
+                 <%= team.name %> <% end %> </strong></div>
               <div class="list-group">
               <% team.members.each do |member| %>
                  <div class="list-group-item list-group-item-action border-0 linksstyle"> <%= member.full_name %>
