--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,9 +2,9 @@
 <div class="container-fluid cal-con">
 	<div class="row d-flex justify-content-center">
 		<div class="col-lg-11">
-    <div>
+    <div style="display: flex; justify-content: center;">
 	   <h1 class="page-head head">All Events</h1>
-       <button class="btn btn-primary"><%= link_to 'Create an Event', new_event_path, style: 'color: white' %></button>
+       <button class="btn btn-primary btn-lg mb-2 ml-2"><%= link_to 'Create an Event', new_event_path, style: 'color: white' %></button>
     </div>
     <div id="calendar"></div>
 
