--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 <div class="container-fluid">
 	<div class="row d-flex justify-content-center">
 	<div class="col-lg-4">
-		<h2 class="page-head"> Sign-up </h2>
+		<h2 class="page-head head"> Sign-up </h2>
 		<%= simple_form_for(@user) do |f| %>
 		        <%= f.input :first_name%>
 		        <%= f.input :last_name%>
