--- a/app/views/admin/dashboard/people.html.erb
+++ b/app/views/admin/dashboard/people.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container-fluid">
-   
-    <h6 class="mt-2"><%= link_to 'Back to Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: white' %></h6>
+
+    <h6 class="mt-2 backbutton"><%= link_to 'Back to Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: white' %></h6>
    <h3 class="mt-3 head" id="users">Current Leads and Volunteers</h3>
  </div>
 
