--- a/app/views/admin/dashboard/signups.html.erb
+++ b/app/views/admin/dashboard/signups.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-  <h6 class="mt-2"><%= link_to 'Back to Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: white' %></h6>
+  <h6 class="mt-2 backbutton"><%= link_to 'Back to Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: white' %></h6>
    <h3 class="mt-3 head">New Sign Ups</h3>
 
    <div class='card col-md-12' style="border:0">
