--- a/app/views/admin/dashboard/teams.html.erb
+++ b/app/views/admin/dashboard/teams.html.erb
@@ -1,8 +1,12 @@
 <div class="container-fluid">
-    <h6 class="mt-2"><%= link_to 'Back to Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: white' %></h6>
-    <h3 class="mt-3 head" id="teams">Teams</h3>
+    <h6 class="backbutton mt-2"><%= link_to 'Back to Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: white' %></h6>
+    <div class="container d-flex justify-content-between">
+      <h3 class="head" id="teams">Teams</h3>
+    <%= link_to 'Add a team', new_team_path, class: 'btn btn-primary'%>
+   </div>
 
-    		<%= link_to 'Add a team', new_team_path, class: 'btn btn-block btn-dark' %>
+ </div>
+  <div class="container-fluid">
 
       <div class="row d-flex justify-content-around">
       <% @teams.each do |team| %>
