--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,11 +1,15 @@
 
-<div class="container-fluid cal-con">
+<div class="container-fluid cal-con d-flex justify-content-center">
+
+	<div class="row container" style="display: flex; justify-content: space-between;">
+	   <h1 class="head">All Events</h1>
+		   <% if current_user.user_category.name === 'Team Lead' || current_user.user_category.name === 'Admin' %>
+       <%= link_to 'Create an Event', new_event_path, style: 'color: white', class:"btn btn-primary btn-lg" %>
+			 <% end %>
+    </div>
+	</div>
 	<div class="row d-flex justify-content-center">
 		<div class="col-lg-11">
-    <div style="display: flex; justify-content: center;">
-	   <h1 class="page-head head">All Events</h1>
-       <button class="btn btn-primary btn-lg mb-2 ml-2"><%= link_to 'Create an Event', new_event_path, style: 'color: white' %></button>
-    </div>
     <div id="calendar"></div>
 
 
@@ -21,7 +25,7 @@
                 <div class="modal-body">
                     <!-- <p id="additionalInfo"></p> -->
                     <p id="starttime"></p>
-										
+
                     <p id="endtime"></p>
                     <p id="location"></p>
                     <p id="message"></p>
@@ -58,5 +62,4 @@
              <%# end %>
         </div>
     </div>
-</div>
 </div>
