--- a/app/views/event_sign_up_mailer/event_sign_up.html.erb
+++ b/app/views/event_sign_up_mailer/event_sign_up.html.erb
@@ -4,13 +4,13 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h5> Thank you for signing up for: <%= @event.name %>
-      <p> The event details are: </p>
-      <p> Date: <%= @event.date %>  </p>
-      <p> Start Time: <%= @event.start_time %> </p>
-      <p> Location: <%= @event.location %> </p>
-      <p> Additional Info <%= @event.additional_info %> </p>
+    <h2> Thank you for signing up for: <%= link_to @event.name, @event %></h3>
+      <h3> The event details are: </h3>
+      <h3> Date: <%= @event.date.strftime('%A %B %d %Y') %>  </h3>
+      <h3> Start Time: <%= @event.start_time.strftime('%l:%M %P') %> </h3>
+      <h3> Location: <%= @event.location %> </h3>
+      <h3> Additional Info <%= @event.additional_info %> </h3>
 
-    <p>We look forward to seeing you there!</p>
+    <h3>We look forward to seeing you there!</h3>
   </body>
 </html>
