--- a/app/views/reminder_mailer/reminder.html.erb
+++ b/app/views/reminder_mailer/reminder.html.erb
@@ -4,14 +4,14 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h3> Reminder! </h3>
-    <h5>  You have <%= @event.name %> tomorrow! </h5>
-      <p> The event details are: </p>
-      <p> Date: <%= @event.date %>  </p>
-      <p> Start Time: <%= @event.start_time %> </p>
-      <p> Location: <%= @event.location %> </p>
-      <p> Additional_info <%= @event.additional_info %> </p>
+    <h2> REMINDER: </h2>
+    <h2>  You have <%= @event.name %> tomorrow! </h2>
+      <h3> The event details are: </h3>
+      <h3> Date: <%= @event.date %>  </h3>
+      <h3> Start Time: <%= @event.start_time %> </h3>
+      <h3> Location: <%= @event.location %> </h3>
+      <h3> Additional Info <%= @event.additional_info %> </h3>
 
-    <p>We look forward to seeing you there!</p>
+    <h3>We look forward to seeing you there!</h3>
   </body>
 </html>
