style welcome mailer

--- a/app/views/welcome_mailer/welcome_user.html.erb
+++ b/app/views/welcome_mailer/welcome_user.html.erb
@@ -4,11 +4,11 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to http://www.forceofnaturealliance.ca/, <%= @user.full_name %></h1>
-    <p>
+    <h1>Welcome to <a href="http://www.forceofnaturealliance.ca/">Force of Nature</a> Mission Control, <%= @user.full_name %></h1>
+    <h3>
       You have successfully signed up to Force of Nature Alliance,
       please wait for your account to be verified.
-    </p>
+    </h3>
     <p>Thanks for joining and have a great day!</p>
   </body>
 </html>
