--- a/app/views/admin/dashboard/events.html.erb
+++ b/app/views/admin/dashboard/events.html.erb
@@ -1,6 +1,6 @@
 
     <h6 class="mt-2"><%= link_to 'Back to Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: white' %></h6>
-    <h3 class="mt-3 head" id="events">Current Events</h3>
+    <h3 class="mt-3 head" id="events">Current Events</h3> <h6 class="mt-2 pull-right" id="pagination"><%= paginate @events %></h6>
     <table class='table table-bordered table-light table-striped'>
         <thead class='thead-inverse'>
             <tr>
