Added mailers for  user category change to general volunteer, reminders emails for 1 day and 1 week, approved email

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
               <%= link_to "Settings", edit_user_path(current_user), class: 'nav-link', style: 'color: white' %>
             </li>
             <% elsif current_user.user_category.name === 'General Volunteer' %>
-              <% if current_user.teams.first %>
+              <% if current_user.teams.first && current_user.teams.first.exists? %>
               <li class="nav-item"><%= link_to 'Team Page', team_path(current_user.teams.first), class: 'nav-link', style: 'color: white' %> </li>
               <% end %>
               <li class="nav-item"> <%= link_to "Settings", edit_user_path(current_user), class: 'nav-link', style: 'color: white'  %> </li>
