--- a/app/views/admin/dashboard/people.html.erb
+++ b/app/views/admin/dashboard/people.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container-fluid">
-   
+
     <h6 class="mt-2"><%= link_to 'Back to Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: white' %></h6>
    <h3 class="mt-3 head" id="users">Current Leads and Volunteers</h3>
  </div>
@@ -14,10 +14,12 @@
                         <strong>Full name:</strong> <%= volunteer.full_name %>
                         <br>
                         <strong>Email:</strong> <%= volunteer.email %>
-                        </div>
+                        <br>
+                      </div>
                         <%= form_tag("upcat/#{volunteer.id}", method: :patch) do %>
+                        User Category:  <span class="user-category"> <%=volunteer.user_category.name %> </span>
                         <div class="field pb-1 pl-2" style="border-bottom: 1px solid grey">
-                           <%= label(:user_category, "user_category") %>
+                           <%= label(:user_category, "Change user category to") %>
                            <%= select_tag "user_category", "<option>General Volunteer</option><option>Guest</option>".html_safe, class:"btn btn-success dropdown-toggle" %>
                         <%= submit_tag "Submit", class:"btn btn-primary" %>
                         <% end %>
@@ -34,9 +36,11 @@
                         <br>
                         <strong>Email:</strong> <%= volunteer.email %>
                         </div>
+                        User Category:  <span style="color:green"> <%=volunteer.user_category.name %></span>
+
                         <%= form_tag("upcat/#{volunteer.id}", method: :patch) do %>
                         <div class="field pb-1 pl-2" style="border-bottom: 1px solid grey">
-                           <%= label(:user_category, "user_category") %>
+                           <%= label(:user_category, "Change user category to") %>
                            <%= select_tag "user_category", "<option>Guest</option><option>Team Lead</option>".html_safe, class:"btn btn-success dropdown-toggle" %>
                         <%= submit_tag "Submit", class:"btn btn-primary" %>
                         <% end %>
