--- a/app/views/admin/dashboard/signups.html.erb
+++ b/app/views/admin/dashboard/signups.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 
   <h6 class="mt-2"><%= link_to 'Back to Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: white' %></h6>
-   <h3 class="mt-3 head">New Sign Ups</h3>
+   <h3 class="mt-3 head">New Sign Ups (Guests)</h3>
 
    <div class='card col-md-12' style="border:0">
            <div class='card-header d-flex'><strong>Guests:&nbsp;</strong> <%= @stats[:guests] %></div>
@@ -41,9 +41,11 @@
                                <td><%= volunteer.created_at.strftime('%B %d %Y') %></td>
                                <td><% if first_event %><%= first_event.name %><% end %></td>
                                <td>
+                                 User Category:  <span class="user-category"> <%=volunteer.user_category.name %> </span>
                                  <%= form_tag("upcat/#{volunteer.id}", method: :patch) do %>
                         <div class="field">
-                            <%= label(:user_category, "user_category") %>
+
+                            <%= label(:user_category, "change user category to") %>
                             <%= select_tag "user_category", "<option>General Volunteer</option><option>Team Lead</option>".html_safe, class:"btn btn-success dropdown-toggle" %>
                             <%= submit_tag "Submit", class:"btn btn-primary"%>
                         </div>
