--- a/app/views/user_mailer/forgot_password.html.erb
+++ b/app/views/user_mailer/forgot_password.html.erb
@@ -2,6 +2,6 @@
 
 To reset your password, click the URL below: <br>
 
-<%= edit_password_reset_url(@user.password_reset_token) %> <!--This is the link to reset your password-->
-
+<%=link_to edit_password_reset_url(@user.password_reset_token), edit_password_reset_url(@user.password_reset_token) %> <!--This is the link to reset your password-->
+<br> 
 If you did not request your password to be reset, just ignore this e-mail and your password will stay the same.
