Connect to show email page (email all button)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,13 +24,10 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 
-// .trix-button--icon-code {
-//   display: none;
-// }
-//
-// .trix-button--icon-strike {
-//   display: none;
-// }
+.trix-button--icon-code {
+  display: none;
+}
+
 
 button.trix-button {
   background-color: white;
