--- a/app/views/custom_mailer/custom_mail.html.erb
+++ b/app/views/custom_mailer/custom_mail.html.erb
@@ -1,2 +1,8 @@
-User text:
 <%= @body.html_safe %>
+
+-----
+<h3> The event details are: </h3>
+Date: <%= @event.date %>  <br>
+Start Time: <%= @event.start_time %> </br>
+Location: <%= @event.location %> </br>
+ Additional Info <%= @event.additional_info %> <br>
