--- a/app/views/custom_emails/new.html.erb
+++ b/app/views/custom_emails/new.html.erb
@@ -3,10 +3,11 @@
 <p> You are emailing members of the event <strong> <%= @event&.name %> </strong> </p>
 <p> All emails will be sent as blind carbon copy (BCC) </p>
 </div>
-<%= simple_form_for @email do |form| %>
+<%= simple_form_for [@event, @email] do |form| %>
   <%= form.input :to_recipients, label: 'To (comma-seperate emails, please)', input_html: {value: @user_emails.join(', ') }%>
-  <%= form.input :email_body, as: :trix_editor, placeholder: "type your email here"  %>
-  <%= form.submit class: 'btn btn-primary' %>
+  <%= form.input :subject, label: "Customize Subject", input_html: {value: @event&.name + ' update'} %>
+  <%= form.input :email_body, label: "Type email content here", as: :trix_editor  %>
+  <%= form.submit "Send Email", class: 'btn btn-primary' %>
 <% end %>
 
 </div>
