--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -63,7 +63,7 @@
 			<% end %>
 	<% if current_user %>
 		<% if current_user.user_category.name === 'Admin' || current_user.user_category.name === 'Team Lead' %>
-			<button 
+			<button
 				class="mt-2 btn btn-primary"
 				data-toggle="modal"
 				data-target="#manageGuests"
@@ -181,7 +181,7 @@
 	        <% end %>
 	      </div>
 	      <div class="modal-footer">
-	      	<button type="button" class="btn btn-primary">Email All Personnel</button>
+	      	<%= link_to "Email All Personnel", new_event_custom_email_path(@event), class: "btn btn-primary" %>
 	        <button type="button" class="btn btn-primary" data-dismiss="modal">Save & Close</button>
 	      </div>
 	    </div>
