--- a/app/views/users/dashboard/index.html.erb
+++ b/app/views/users/dashboard/index.html.erb
@@ -43,7 +43,7 @@
       <%= link_to (teams_path), class: 'content-link' do%>
       <div class="card dash">
         <i class="fa fa-users fa-3x" aria-hidden="true"></i>
-        <h3> Personnel </h3>
+        <h3> Teams </h3>
       </div>
       <% end %>
 
