--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,39 +1,73 @@
+  <h6 class="mt-2"><%= link_to 'Back to Teams', teams_path, class: 'nav-link', style: 'color: white' %></h6>
+<% current_user&.team_memberships.each do |team| %>
+	<% if team.id == @team.id %>
 
-<div class="container" style="margin-top:1rem">
-	<!-- <p>dashboard/teams</p> -->
-	<div class="team-info">
-	<h4 class="head"><%= @team.name %></h4>
-	<h5 class="head"><%= @team.team_category.name %> team</h5>
-  </div>
-	<div class="row d-flex">
-		<div class="col-md-6">
-			<div class="card item">
-				<h5>Members </h5>
-				<table class="table table-responsive">
-					<thead>
+	<div class="container" style="margin-top:1rem">
+		<!-- <p>dashboard/teams</p> -->
+		<div class="team-info">
+		<h4 class="head"><%= @team.name %></h4>
+		<h5 class="head"><%= @team.team_category.name %> team</h5>
+	  </div>
+		<div class="row d-flex">
+			<div class="col-md-6">
+				<div class="card item">
+					<h5>Team Leads </h5>
+					<p> Team lead and team edit to be added </p>
+					<table class="table table-responsive">
+						<thead>
+							<tr>
+								<th scope="col"> Name</th>
+								<th scope="col"> Email</th>
+								<th scope="col"> Phone Number </th>
+							</tr>
+						</thead>
 						<tr>
-							<th scope="col"> Name</th>
-							<th scope="col"> Email</th>
+							<% if false %>
+							<td> <%= @team.&team_lead.full_name if present? %></td>
+						  <td> <%= @team.&team_lead.email if present? %></td>
+						 <td> <%= @team.&team_lead.phone_number if present? %></td>
+						 <% end %>
 						</tr>
-					</thead>
-					<% @team.members.each do |member| %>
-					<tr>
-						<td> <%= member.full_name %></td>
-						<td> <%= member.email %></td>
-					</tr>
-					<% end %>
-				</table>
+					</table>
+				</div>
+
+				<div class="card item">
+					<h5>Members </h5>
+					<table class="table table-responsive">
+						<thead>
+							<tr>
+								<th scope="col"> Name</th>
+								<th scope="col"> Email</th>
+							</tr>
+						</thead>
+						<% @team.members.each do |member| %>
+						<tr>
+							<td> <%= member.full_name %></td>
+							<td> <%= member.email %></td>
+						</tr>
+						<% end %>
+					</table>
+				</div>
 			</div>
-		</div>
-		<div class="col-md-6 team-lead-show-item">
-			<div class="card item">
-			<h4>Briefings</h4>
-				<% if @team.team_category.name === 'Regional' %>
-					<a href="https://drive.google.com/drive/folders/105qoVeDX9uucrGCXwig0rsy6YI2tlbdD">Regional Team Google Drive Documents</a>
-				<% elsif @team.team_category.name === 'Operational' %>
-					<a href="https://drive.google.com/drive/folders/1H2OAq3uZ5SReSvfpr4eg2QXfDt1a-Xgb">Operational TeamGoogle Drive Documents</a>
-				<% end %>
+			<div class="col-md-6 team-lead-show-item">
+				<div class="card item">
+				<h4>Briefings</h4>
+					<% if @team.team_category.name === 'Regional' %>
+						<a href="https://drive.google.com/drive/folders/105qoVeDX9uucrGCXwig0rsy6YI2tlbdD">Regional Team Google Drive Documents</a>
+					<% elsif @team.team_category.name === 'Operational' %>
+						<a href="https://drive.google.com/drive/folders/1H2OAq3uZ5SReSvfpr4eg2QXfDt1a-Xgb">Operational TeamGoogle Drive Documents</a>
+					<% end %>
+				</div>
 			</div>
 		</div>
 	</div>
+		<% break %>
+	<% else  %>
+	<div class="container card"  style="margin-top:1rem">
+	You are not a member of this team.
+
+
 </div>
+	<% break %>
+	<% end %>
+<% end %>
