--- a/app/views/eventsignup/new.html.erb
+++ b/app/views/eventsignup/new.html.erb
@@ -25,6 +25,9 @@
             </div>
             <%= submit_tag "Sign up!", class: "btn btn-success pull-right"%>
         <% end %>
+        <div class="card" style="width: 40%; padding:5px;">
+        		Already have an account? <%=link_to "Log in here", new_session_path %>
+          </div>
   </div>
  </div>
 
